cmake_minimum_required(VERSION 3.12)

project(pico_examples C CXX ASM)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)

# Include the PicoSystem library
include(${CMAKE_CURRENT_LIST_DIR}/libraries/picosystem.cmake REQUIRED)

add_subdirectory(examples)

# setup release packages
set(CPACK_INCLUDE_TOPLEVEL_DIRECTORY OFF)
set(CPACK_GENERATOR "ZIP" "TGZ")
include(CPack)
